--- a/views/posts.pug
+++ b/views/posts.pug
@@ -22,7 +22,7 @@ block template
                                 input#exampleInput19.form-control(type='text' name="desc" required)                           
                             .mb-3
                                 label.form-label(for='exampleInput6')  Image 
-                                input#exampleInput6.form-control(type='text' name="image" required)
+                                input#exampleInput6.form-control(type='file' name="file" required)
                             .mb-3
                                 label.form-label(for='exampleFormControlTextarea1')  Content 
                                 textarea#mytextarea(name="content" required)  Hello, World! 
